# prevplan

./: .env.example  .gitignore  README.md  README_PUBLICACAO.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py  security.py
backend/app/api/: routes.py
backend/app/comparison/: __init__.py  comparator.py  rules.py
backend/app/domain/: __init__.py  schemas.py
backend/app/drafting/: __init__.py  service.py
backend/app/ingestion/: __init__.py  archive.py  classifier.py  extractor.py  pdf.py  segmentation.py  spreadsheets.py  types.py
backend/app/planning/: __init__.py  docx.py  engine.py  extractor.py  normative.py  schemas.py
backend/app/storage/: __init__.py  memory.py
backend/tests/: test_comparator.py  test_extractor.py  test_planning_engine.py  test_segmentation.py
deploy/: Caddyfile  README_DEPLOY.md
deploy/postgres/: schema.sql
docs/: architecture.md  rules.md  sample-cases.md  security-lgpd.md  test-tunnel.md
frontend/: .dockerignore  Dockerfile  next.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
